namespace Assets.Scripts.Player_Scripts
{
    public class PlayerAnimationStrings
    {
        public const string IsRunning = "IsRunning";
        public const string IsGround = "IsGround";
        public const string IsWalking = "IsWalking";
        public const string IsCrouch = "IsCrouch";
        public const string yVelocity = "yVelocity";

    }
}
